--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+main{
+	background-color:#f5f5f5;
+	padding: 20px;
+}
+.testimonial{
+	background-color:white;
+	padding:10px;
+	margin:30px 5px;
+	border: 1px solid black;
+}
+.testimonial p{
+	font-style:normal;
+}
+.author{
+	text-align:right;
+	font-style:italic !important;
+	margin-right:5px;
+} 
