--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,20 @@ main{
 	background-color:#f5f5f5;
 	padding: 20px;
 }
-.testimonial{
+.testimonial1{
 	background-color:white;
 	padding:10px;
 	margin:30px 5px;
 	border: 1px solid black;
 }
-.testimonial p{
+p{
 	font-style:normal;
+}
+.testimonial2{
+	background-color:white;
+	padding:10px;
+	margin:30px 5px;
+	border: 1px solid black;
 }
 .author{
 	text-align:right;
