--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 /*  your css code here. If applicable */
+
 main{
 	background-color:#f5f5f5;
 	padding: 20px;
 }
-.testimonial1{
+.testimonial{
 	background-color:white;
 	padding:10px;
 	margin:30px 5px;
@@ -12,7 +13,7 @@ main{
 p{
 	font-style:normal;
 }
-.testimonial2{
+.testimonial{
 	background-color:white;
 	padding:10px;
 	margin:30px 5px;
